<resources>
    <string name="app_name">OpcCounter</string>
    <string name="opc">OPC</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="coming_soon">coming soon</string>
    <string name="vitamin_d_3">D3</string>
    <string name="arginin">Arginin</string>
    <string name="opc_counter">OPC Counter</string>
    <string name="grape_seed_extract">Traubenkernextrakt</string>
    <string name="body_weight">Körpergewicht</string>
    <string name="opc_share">OPC Anteil</string>
    <string name="opc_per_body_weight">OPC Menge pro kg</string>
</resources>
