<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/colorPrimaryDark"
    tools:context="com.futuzon.opccounter.view.opc.OpcCounterFragment">

    <RelativeLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorAccent">

        <TextView
            android:id="@+id/opc_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/opc_counter"
            android:textSize="@dimen/selector_text_size_middle" />

        <TextView
            android:id="@+id/opc_value"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/opc_title"
            android:gravity="center_horizontal"
            android:text="@string/opc_counter"
            android:textSize="@dimen/selector_text_size_large" />

        <TextView
            android:id="@+id/opc_subtitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/opc_value"
            android:gravity="center_horizontal"
            android:text="@string/opc_counter"
            android:textSize="@dimen/selector_text_size_small" />


    </RelativeLayout>


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/header">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
                android:id="@+id/card_view1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="@dimen/selector_text_margin"
                card_view:cardBackgroundColor="@color/cardview_light_background"
                card_view:cardCornerRadius="4dp"
                card_view:cardElevation="4dp"
                card_view:cardUseCompatPadding="true">

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">


                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:text="@string/opc"
                        android:textColor="@color/colorGrey"
                        android:textSize="@dimen/selector_text_size_middle" />

                    <TextView
                        android:id="@+id/value"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/selector_text_margin"
                        android:layout_toLeftOf="@+id/chev"
                        android:gravity="right"
                        android:text="@string/app_name"
                        android:textColor="@color/colorBlack"
                        android:textSize="@dimen/selector_text_size_middle"
                        android:textStyle="bold" />

                    <ImageView
                        android:id="@+id/chev"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_alignParentRight="true"
                        android:layout_margin="7dp"
                        android:src="@drawable/ic_chevron_right_black_24dp" />
                </RelativeLayout>

            </android.support.v7.widget.CardView>

        </RelativeLayout>

    </ScrollView>


</RelativeLayout>
